IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
12/9/11: In eTomo - PEET upgraded the masking panel.(Bug# 1568)

12/6/11: Fixed eTomo - PEET copy project functionality so that it continues to
point to the same files.

12/9/11: Fixed problems with division by zero in routine that solves linear
equations with outlier removal for solvematch, findwarp, and refinematch.

12/8/11: Made processchunks run programs with python.  Added options to
vmstopy for setting nice and environment variables.

12/8/11: Made bead fixer run tiltalign with vmstopy.

12/5/11: Improved the appearance of eTomo - PEET.(Bug# 1583)

12/2/11: Fixed test for whether copying from current object in object edit 
dialog (In 4.3).

12/2/11: Fixed explosion of memory usage in undo-redo module when combining
objects or moving all contours from one to another (In 4.3).

12/1/11: Fixed 3dmod crash when deleting object with no current contour is set
(In 4.3).

12/1/11: In eTomo - PEET, getting some tooltips from peetprm.adoc.(Bug# 1577)

11/30/11: IMOD_4-4-2
11/30/11: Changed Corrsearch3d to scale boundary models to image file
coordinates, so a model from unbinned data can be used on binned data in
Edgepatches.

11/30/11: Used vector buffer objects to speed up model view graphics for
lighted surfaces and wireframe meshes.  Turned on multisampling (full-scene
antialiasing) in model view to give smoother lines and polygon edges.

11/29/11: In eTomo - PEET improved the error messages.(Bug# 1563)

11/29/11: Fixed crash when current surface only is selected in Model View Edit
Objects window and there are empty contours (In 4.3).

11/29/11: Fixed initial height of Info window when there is a long filename
(In 4.3).

11/29/11: Changes to Noske plugins; livewire works in blocks (In 4.3).

11/28/11: Fixed Last Fill Color button in finegrain dialog (In 4.3).

11/22/11: Fixed pysed.py to allow ^ and + in filenames again (In 4.3).

11/18/11: IMOD_4-4-1